# apache-subversion

./: .asf.yaml  .clang-format  BRANCH-README  BRANCH-README.md  CHANGES  CMakeLists.txt  COMMITTERS  INSTALL  Makefile.in  NOTICE  README  STATUS  aclocal.m4.in  build.conf  configure.ac  win-tests.py
.github/workflows/: autoconf.yml  cmake.yml  detect-backport-conflicts.yml
notes/: knobs
subversion/: svn_private_config.hw
subversion/bindings/javahl/: Manifest.in
subversion/bindings/javahl/native/: CreateJ.cpp  CreateJ.h  DiffOptions.h  InfoCallback.cpp  OutputStream.cpp  SVNClient.cpp  SVNClient.h  Version.cpp  Version.hpp  org_apache_subversion_javahl_SVNClient.cpp
subversion/bindings/javahl/native/jniwrapper/: jni_class_cache.cpp  jni_object.hpp
subversion/bindings/javahl/src/org/apache/subversion/javahl/: ClientException.java  ClientNotifyInformation.java  CommitInfo.java  CommitItem.java  CommitItemStateFlags.java  ConflictDescriptor.java  ConflictResult.java  DiffSummary.java  ISVNClient.java  ISVNConfig.java  ISVNEditor.java  ISVNRemote.java  ISVNReporter.java  ISVNRepos.java  JNIError.java  JNIObject.java  NativeException.java  NativeResources.java  OperationContext.java  ProgressEvent.java  ReposNotifyInformation.java  SVNClient.java  SVNRepos.java  SVNUtil.java  SubversionException.java
subversion/bindings/javahl/src/org/tigris/subversion/javahl/: BlameCallback.java  BlameCallback2.java  BlameCallback3.java  BlameCallbackImpl.java  ChangePath.java  ChangelistCallback.java  ClientException.java  CommitItem.java  CommitItemStateFlags.java  CommitMessage.java  Depth.java  (+55 more)
subversion/bindings/swig/: INSTALL  svn_delta.i  svn_wc.i
subversion/bindings/swig/include/: svn_types.swg
subversion/bindings/swig/python/libsvn_swig_py/: swigutil_py.c
subversion/bindings/swig/python/svn/: fs.py
subversion/bindings/swig/python/tests/: client.py  fs.py  mergeinfo.py  repository.py  utils.py
subversion/bindings/swig/ruby/libsvn_swig_ruby/: swigutil_rb.c  swigutil_rb__pre_ruby.h
subversion/bindings/swig/ruby/svn/: core.rb  error.rb  info.rb  util.rb
subversion/bindings/swig/ruby/test/: test_core.rb  test_delta.rb  test_fs.rb  test_repos.rb  windows_util.rb
subversion/include/: svn_client.h  svn_diff.h  svn_error_codes.h  svn_io.h  svn_opt.h  svn_string.h  svn_types.h  svn_utf.h  svn_version.h  svn_wc.h  svn_xml.h
subversion/include/private/: svn_atomic.h  svn_client_private.h  svn_cmdline_private.h  svn_dep_compat.h  svn_io_private.h  svn_opt_private.h  svn_repos_private.h  svn_task.h  svn_thread_cond.h  svn_utf_private.h  svn_wc_private.h  svn_xml_private.h
subversion/libsvn_client/: blame.c  client.h  cmdline.c  conflicts.c  deprecated.c  diff.c  diff_patch.c  merge.c  merge_processor.c  patch.c  upgrade.c  util.c
subversion/libsvn_diff/: diff_file.c  diff_tree_debug.c  parse-diff.c
subversion/libsvn_fs/: fs-loader.c
subversion/libsvn_fs_fs/: stats.c  tree.c
subversion/libsvn_fs_x/: dag_cache.c  revprops.c  string_table.c
subversion/libsvn_ra_serf/: eagain_bucket.c  ra_serf.h  sb_bucket.c  serf.c  update.c  util.c
subversion/libsvn_repos/: commit.c  config_file.c  repos.c  rev_hunt.c
subversion/libsvn_subr/: adler32.c  apr_escape.c  atomic.c  checksum.c  checksum.h  checksum_apr.c  checksum_bcrypt.c  checksum_context.c  checksum_openssl.c  checksum_xdigest.c  cmdline.c  cmdline_editor.c  config_file.c  deprecated.c  eol.c  gpg_agent.c  hash.c  io.c  macos_keychain.c  mergeinfo.c  opt.c  opt_revision.c  opt_subcommand.c  stream.c  string.c  subst.c  sysinfo.c  sysinfo.h  utf.c  utf8proc.c  utf_validate.c  version.c  waitable_counter.c  win32_crypto.c  win32_xlate.c  win32_xlate.h  xml.c  xml_escape.c  xml_stream.c
subversion/libsvn_subr/lz4/: lz4.c  lz4internal.h
subversion/libsvn_subr/utf8proc/: utf8proc.c  utf8proc_internal.h
subversion/libsvn_wc/: adm_files.c  questions.c  revert.c  textbase.c  upgrade.c  wc.h  wc_db_pristine.c  workqueue.c
subversion/mod_dav_svn/: lock.c  mod_dav_svn.c  repos.c
subversion/svn/: auth-cmd.c  blame-cmd.c  changelist-cmd.c  cl.h  filesize.c  info-cmd.c  list-cmd.c  log-cmd.c  patch-cmd.c  propdel-cmd.c  propedit-cmd.c  propget-cmd.c  proplist-cmd.c  propset-cmd.c  shelf-cmd.c  shelf2-cmd.c  svn.c  util.c
subversion/svnadmin/: svnadmin.c
subversion/svnbench/: null-list-cmd.c  svnbench.c  util.c
subversion/svnbrowse/: model.c  palette.py  svnbrowse.c  svnbrowse.h
subversion/svndumpfilter/: svndumpfilter.c
subversion/svnfsfs/: svnfsfs.c
subversion/svnlook/: svnlook.c
subversion/svnmucc/: svnmucc.c
subversion/svnrdump/: svnrdump.c
subversion/svnserve/: logger.c  serve.c  svnserve.c
subversion/svnsync/: svnsync.c
subversion/svnversion/: svnversion.c
subversion/tests/: README
subversion/tests/cmdline/: authz_tests.py  basic_tests.py  blame_tests.py  copy_tests.py  dav_tests.py  davautocheck.sh  entries-dump.c  externals_tests.py  info_tests.py  input_validation_tests.py  log_tests.py  mod_dav_svn_tests.py  prop_tests.py  svneditor.py  svnmucc_tests.py  svnserveautocheck.sh  upgrade_tests.py
subversion/tests/cmdline/svntest/: actions.py  factory.py  main.py  testcase.py  verify.py  wc.py
subversion/tests/libsvn_client/: client-test.c
subversion/tests/libsvn_diff/: parse-diff-test.c
subversion/tests/libsvn_ra/: ra-test.c
subversion/tests/libsvn_repos/: repos-test.c
subversion/tests/libsvn_subr/: adler32-test.c  checksum-test.c  opt-test.c  skel-test.c  stream-test.c  translate-test.c  utf-test.c  xml-test.c
subversion/tests/libsvn_wc/: conflict-data-test.c
tools/client-side/: store-plaintext-password.py
tools/client-side/svn-mergeinfo-normalizer/: svn-mergeinfo-normalizer.c
tools/client-side/svnconflict/: svnconflict.c
tools/dev/: contribulyze.py  gen-javahl-errors.py
tools/dev/svnraisetreeconflict/: svnraisetreeconflict.c
tools/dev/unix-build/: Makefile.local  Makefile.svn
tools/dev/wc-ng/: svn-wc-db-tester.c
tools/hook-scripts/mailer/: mailer.py
tools/server-side/: svn-backup-dumps.py  svnauthz.c
tools/server-side/svnpubsub/svnpubsub/: client.py
(+81 files in other folders)
